@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 0.999375-5
-Date: 2008-0.-..
+Date: 2008-03-05
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
@@ -14,7 +14,7 @@ LazyLoad: yes
 LazyData: no
 LazyDataNote: no longer available, since we use data/*.R *and* our classes
 License: GPL (>= 2)
- This R package includes libraries CHOLMOD, AMD, COLAMD and CSparse
+LicenseDetails: The Matrix package includes libraries CHOLMOD, AMD, COLAMD and CSparse
  from the University of Florida sparse matrix library maintained by Tim
  Davis.  All sections of that code are covered by the GPL or LGPL
  licenses.  See the directory doc/UFsparse for details.
