@@ -54,10 +54,8 @@ setMethod("triu", "nsCMatrix",
 
 ## FIXME: generalize to "nsparseMatrix" or (class union)  "symmetric sparse"
 setMethod("image", "nsCMatrix",
-          function(x, ...) {
-              x <- as(as(x, "dsCMatrix"), "dgTMatrix")
-              callGeneric()
-          })
+	  function(x, ...) image(as(as(x, "dsCMatrix"), "dgTMatrix"), ...))
+
 
 setMethod("chol", signature(x = "nsCMatrix", pivot = "missing"),
 	  function(x, pivot, ...) chol(x, pivot = FALSE))
